--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,15 +9,27 @@
         border: solid 2px #1E90FF;
         border-radius: 5px;
         width:400px;
-        height:120px;
+        height:150px;
         padding:10px;
         margin-bottom:10px;
+    }
+    .deleteBox{
+        display: none;
+    }
+    .itemBox:hover .deleteBox{
+        display: block;
+    }
+    .successBox{
+        display: none;
+    }
+    .itemBox:hover .successBox{
+        display: block;
     }
     .itemBoxHighlight {
         border: solid 2px #FFFFFF;
         border-radius: 5px;
         width:400px;
-        height:120px;
+        height:150px;
         padding:10px;
         margin-bottom:10px;
         background-color:#999999;
@@ -52,6 +64,14 @@
     #sortable li span { position: absolute; margin-left: -1.3em; }
     </style>
     <script type="text/javascript">
+    console.log(<%=data%>);
+    var err="<%=err%>";
+    if(err.trim()!=""){
+      if(err.trim=='already login')
+        alert("이미 로그인 되어있습니다");
+      else if(err.trim=='not login')
+        alert("로그인을 해주세요");
+    }
     function submitItem() {
         if(!validateItem()) {
         	return;
@@ -97,16 +117,6 @@
     function createItem() {
         $(createBox())
         .appendTo("#itemBoxWrap")
-        .hover(
-            function() {
-                $(this).find('.deleteBox').show();
-                $(this).find('.successBox').show();
-            },
-            function() {
-                $(this).find('.deleteBox').hide();
-                $(this).find('.successBox').hide();
-            }
-        )
         .append("<div class='successBox'>[완료]</div>")
     		.find(".successBox").click(function() {
             if($(this).parent().find('[name=success]').val()=='true'){
@@ -125,7 +135,6 @@
                     valueCheck = true;
                 }
             });
-
             if(valueCheck) {
                 var delCheck = confirm('입력하신 내용이 있습니다.\n삭제하시겠습니까?');
             }
@@ -133,6 +142,11 @@
                 $(this).parent().parent().remove();
                 reorder();
             }
+        });
+        $(document).ready(function(){
+          $("input[name=check]").change(function(){
+            $("input[name=todo]").fadeToggle();
+          });
         });
         reorder();
     }
@@ -142,13 +156,19 @@
                      + "<span class='itemNum'></span> "
                      + "<input type='hidden' name='success' value='false'>"
                      + "title: <input type='text' name='title' "
-                     + "style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'/>"
+                     + "style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>"
                      + "<br>content:<br> <textarea name='content' style='width:400px;'/>"
+                     + "TODO<input type='checkbox' name='check' checked='true'>"
+                     + "<input type='date' name='todo' value='1995-01-01'>"
                      + "</div>"
                      + "</div>";
         return contents;
     }
-
+    $(document).ready(function(){
+      $("input[name=check]").change(function(){
+        $("input[name=todo]").fadeToggle();
+      });
+    });
     </script>
   </head>
   <body>
@@ -162,13 +182,41 @@
     <a href="/logout">로그아웃</a>
     <% } %>
     <div>
-        <div style="float:left;width:100px;">아이템 추가 : </div>
+        <div style="float:left;width:100px;">TODO-list : </div>
         <div style="clar:both;">
-            <input type="button" id="addItem" value="추가" onclick="createItem();" />
-            <input type="button" id="submitItem" value="저장" onclick="submitItem();" />
+          <% if( nickname ) { %>
+            <input type="button" id="addItem" value="추가" onclick="createItem();" >
+            <input type="button" id="submitItem" value="저장" onclick="submitItem();" >
+          <% } else { %>
+            <p>로그인시 이용 가능합니다.</p>
+          <% } %>
         </div>
     </div>
     <br />
-    <div id="itemBoxWrap"></div>
+    <div id="itemBoxWrap">
+      <% if( !nickname ) {
+          for(var i = 0;i < data.length; i++){%>
+            <% if( data[i].success ) {%>
+              <div class='itemBox'  background="#ddff55" >
+            <%}else{%>
+              <div class='itemBox'>
+            <%}%>
+              <div style='float:left;'>
+                <span class='itemNum'></span>
+                <input type='hidden' name='success' value='<%=data[i].success%>'>
+                title: <input type='text' name='title' value='<%=data[i].title%>'
+                style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>
+                <br>content:<br> <textarea name='content' value='<%=data[i].content%>' style='width:400px;'>
+                TODO<input type='checkbox' name='check' checked='true'>
+                <input type='date' name='todo' value='1995-01-01'>
+              </div>
+              <div class="suucessBox">
+                [완료]
+                <div class="deleteBox">[삭제]</div>
+              </div>
+            </div>
+          <%}
+      } %>
+    </div>
   </body>
 </html>
