--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -8,7 +8,11 @@
     <script>
       var err="<%=err%>";
       if(err.trim()!=""){
-        alert("이미 존재하는 아이디입니다");
+        if(err.trim()=='wrong access'){
+          alert("잘못된 접근입니다");
+        }else{
+          alert("이미 존재하는 아이디입니다");
+        }
       }
       function onSignSubmit()
       {
