--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script>
+      //check error
       var err="<%=err%>";
       if(err.trim()!=""){
         if(err.trim()=='wrong access'){
@@ -14,6 +15,12 @@
           alert("이미 존재하는 아이디입니다");
         }
       }
+      //check validate sign up condition
+      /*
+        check empty field
+        ID length >= 6
+        password length >= 8
+      */
       function onSignSubmit()
       {
         if ( $("#user_id").val().trim() == "" )
@@ -60,6 +67,9 @@
       </script>
 </head>
 <body>
+  <!-- sign up form -->
+  <!-- user_id, user_pwd, user_nickname -->
+  <!-- sign up(submit), cancel(back) button -->
   <form action="/check" method="post" onsubmit="return onSignSubmit();">
     <input type="hidden" name="checked" id="checked" value="false">
     아이디 : <input type="text" name="user_id" id="user_id" required><br/>
