--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -6,176 +7,204 @@
     <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- css lines -->
     <style>
-    .itemBox {
-        border: solid 2px #1E90FF;
-        border-radius: 5px;
-        width:400px;
-        height:150px;
-        padding:10px;
-        margin-bottom:10px;
-    }
-    .deleteBox{
-        display: none;
-    }
-    .itemBox:hover .deleteBox{
-        display: block;
-    }
-    .successBox{
-        display: none;
-    }
-    .itemBox:hover .successBox{
-        display: block;
-    }
-    .itemBoxHighlight {
-        border: solid 2px #FFFFFF;
-        border-radius: 5px;
-        width:400px;
-        height:150px;
-        padding:10px;
-        margin-bottom:10px;
-        background-color:#999999;
-    }
-    .deleteBox {
-        float:right;
-        display:none;
-        cursor:pointer;
-    }
-    .successBox {
-        float:right;
-        display:none;
-        cursor:pointer;
-    }
-    text {
-			padding: 10px;
-			font-size: 16px;
-			resize: none;
-		}
-    textarea {
-			padding: 10px;
-			box-sizing: border-box;
-			border: solid 2px #1E90FF;
-			font-size: 16px;
-			resize: none;
-		}
+      #frame{
+        width: 500px;
+        height: 100%;
+        margin: 0 auto;
+        padding-top: 50px;
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 50px;
+        background-color: rgba(0,0,0,0.8);
+      }
+      body{
+        background-repeat : repeat;
+        background-image: url('/static/images/bg.png');
+        color: #f2f2f2;
+      }
+      .itemBox {
+          border: solid 2px #222222;
+          border-radius: 5px;
+          width:400px;
+          height:150px;
+          padding:10px;
+          margin-bottom:10px;
+          background-color:#999999;
+      }
+      .deleteBox{
+          display: none;
+      }
+      .itemBox:hover .deleteBox{
+          display: block;
+      }
+      .successBox{
+          display: none;
+      }
+      .itemBox:hover .successBox{
+          display: block;
+      }
+      .itemBoxHighlight {
+          border: solid 2px #FFFFFF;
+          border-radius: 5px;
+          width:400px;
+          height:150px;
+          padding:10px;
+          margin-bottom:10px;
+          background-color:#999999;
+      }
+      .deleteBox {
+          float:right;
+          display:none;
+          cursor:pointer;
+      }
+      .successBox {
+          float:right;
+          display:none;
+          cursor:pointer;
+      }
+      text {
+  			padding: 10px;
+  			font-size: 16px;
+  			resize: none;
+  		}
+      textarea {
+  			padding: 10px;
+  			box-sizing: border-box;
+  			border: solid 2px #1E90FF;
+  			font-size: 16px;
+  			resize: none;
+  		}
     </style>
     <style>
-    #sortable { list-style-type: none; margin: 0; padding: 0; width: 400px; }
-    #sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
-    #sortable li span { position: absolute; margin-left: -1.3em; }
+      #sortable { list-style-type: none; margin: 0; padding: 0; width: 400px; }
+      #sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
+      #sortable li span { position: absolute; margin-left: -1.3em; }
     </style>
     <script type="text/javascript">
-    console.log('<%=nickname%>');
-    //check error
-    var err="<%=err%>";
-    if(err.trim()!=""){
-      if(err.trim()=='already login')
-        alert("이미 로그인 되어있습니다");
-      else if(err.trim()=='not login')
-        alert("로그인을 해주세요");
-      else{
-          alert("잘못된 접근입니다");
-      }
-    }
-    //change color of loaded itembox
-    /*
-      default color: white
-      if success, color change #ddff55
-      else if deadline over, color change #222222
-    */
-    $(window).load(function(){
-      $(".itemBox").each(function(i, box) {
-        if($(box).find('[name=check]').val()=='true'){
-          if($(box).find('[name=todo]').val()<formatDate()){
-            $(box).css("background-color","#222222");
-          }
+      //check error
+      var err="<%=err%>";
+      if(err.trim()!=""){
+        if(err.trim()=='already login')
+          alert("이미 로그인 되어있습니다");
+          else if(err.trim()=='not login')
+          alert("로그인을 해주세요");
+        else{
+            alert("잘못된 접근입니다");
         }
-        if($(box).find('[name=success]').val()=='true'){
-          $(box).css("background-color","#ddff55");
+      }
+      //color
+      var finish="#92f292";
+      var fail="#f29292";
+      var normal="#999999";
+      //change color of loaded itembox
+      /*
+        default color: white
+        if success, color change #ddff55
+        else if deadline over, color change #222222
+      */
+      $(window).load(function(){
+        $(".itemBox").each(function(i, box) {
+          if($(box).find('[name=check]').val()=='true'){
+            if($(box).find('[name=todo]').val()<formatDate()){
+              $(box).css("background-color",fail);
+            }
+          }
+          if($(box).find('[name=success]').val()=='true'){
+            $(box).css("background-color",finish);
+          }
+        });
+      });
+      //sense a click of successbox and change background
+      /*
+        default color: white
+        if success, color change #ddff55
+        else if deadline over, color change #222222
+      */
+      $(document).on("click",".successBox",function(){
+        if($(this).parent().find('[name=success]').val()=='true'){
+          if($(this).parent().find('[name=check]').val()=='true'){
+            if($(this).parent().find('[name=todo]').val()<formatDate()){
+              $(this).parent().css("background-color",fail);
+            }else{
+              $(this).parent().css("background-color",normal);
+            }
+          }else{
+            $(this).parent().css("background-color",normal);
+          }
+          $(this).parent().find('[name=success]').val('false');
+        }else{
+          $(this).parent().css("background-color",finish);
+          $(this).parent().find('[name=success]').val('true');
         }
       });
-    });
-    //sense a click of successbox and change background
-    /*
-      default color: white
-      if success, color change #ddff55
-      else if deadline over, color change #222222
-    */
-    $(document).on("click",".successBox",function(){
-      if($(this).parent().find('[name=success]').val()=='true'){
-        if($(this).parent().find('[name=check]').val()=='true'){
+      //sense a click of deletebox and delete itembox
+      $(document).on("click",".deleteBox",function() {
+        var valueCheck = false;
+        $(this).parent().find('textarea').each(function() {
+          if($(this).attr("name") != "type" && $(this).val() != '') {
+            valueCheck = true;
+          }
+        });
+        if(valueCheck) {
+          var delCheck = confirm('입력하신 내용이 있습니다.\n삭제하시겠습니까?');
+        }
+        if(!valueCheck || delCheck == true) {
+          $(this).parent().remove();
+          reorder();
+        }
+      });
+      //sense a change of checkbox and change date input show or hide
+      $(document).on("change","input[name=check]",function(){
+        if($(this).is(":checked")){
+          $(this).val("true");
+          $(this).parent().find("input[name=todo]").show();
           if($(this).parent().find('[name=todo]').val()<formatDate()){
-            $(this).parent().css("background-color","#222222");
+            $(this).parent().parent().css("background-color",fail);
           }else{
-            $(this).parent().css("background-color","white");
+            $(this).parent().parent().css("background-color",normal);
           }
         }else{
-          $(this).parent().css("background-color","white");
+          $(this).val("false");
+          $(this).parent().find("input[name=todo]").hide();
+          $(this).parent().parent().css("background-color",normal);
         }
-        $(this).parent().find('[name=success]').val('false');
-      }else{
-        $(this).parent().css("background-color","#ddff55");
-        $(this).parent().find('[name=success]').val('true');
+        if($(this).parent().parent().find('[name=success]').val()=='true'){
+          $(this).parent().parent().css("background-color",finish);
+        }
+      });
+      //return today date
+      function formatDate() {
+        var d = new Date();
+        var month = '' + (d.getMonth() + 1);
+        var day = '' + d.getDate();
+        var year = d.getFullYear();
+        if (month.length < 2){
+          month = '0' + month;
+        }
+        if (day.length < 2){
+          day = '0' + day;
+        }
+        return [year, month, day].join('-');
       }
-    });
-    //sense a click of deletebox and delete itembox
-    $(document).on("click",".deleteBox",function() {
-          var valueCheck = false;
-          $(this).parent().find('textarea').each(function() {
-              if($(this).attr("name") != "type" && $(this).val() != '') {
-                  valueCheck = true;
-              }
-          });
-          if(valueCheck) {
-              var delCheck = confirm('입력하신 내용이 있습니다.\n삭제하시겠습니까?');
-          }
-          if(!valueCheck || delCheck == true) {
-              $(this).parent().remove();
-              reorder();
-          }
-    });
-    //sense a change of checkbox and change date input show or hide
-    $(document).on("change","input[name=check]",function(){
-      if($(this).is(":checked")){
-        $(this).val("true");
-        $(this).parent().find("input[name=todo]").show();
-      }else{
-        $(this).val("false");
-        $(this).parent().find("input[name=todo]").hide();
+      //make hiddenField to submit and append form
+      function makeInput(name,value) {
+        var hiddenField = document.createElement("input");
+        hiddenField.setAttribute("type", "hidden");
+        hiddenField.setAttribute("name", name);
+        hiddenField.setAttribute("value", value);
+        return hiddenField;
       }
-    });
-    //return today date
-    function formatDate() {
-      var d = new Date();
-      var month = '' + (d.getMonth() + 1);
-      var day = '' + d.getDate();
-      var year = d.getFullYear();
-      if (month.length < 2){
-         month = '0' + month;
-      }
-      if (day.length < 2){
-         day = '0' + day;
-      }
-      return [year, month, day].join('-');
-    }
-    //make hiddenField to submit and append form
-    function makeInput(name,value) {
-      var hiddenField = document.createElement("input");
-      hiddenField.setAttribute("type", "hidden");
-      hiddenField.setAttribute("name", name);
-      hiddenField.setAttribute("value", value);
-      return hiddenField;
-    }
-    //make form from itemboxs and submit
-    /*
-      user: String
-      timestamp: String
-      title: list
-      content: list
-      success: list
-      check: list
-      todo: list
-    */
-    function submitItem() {
+      //make form from itemboxs and submit
+      /*
+        user: String
+        timestamp: String
+        title: list
+        content: list
+        success: list
+        check: list
+        todo: list
+      */
+      function submitItem() {
         if(!validateItem()) {
         	return;
         }else{
@@ -209,83 +238,83 @@
           form.submit();
         }
         alert("등록");
-    }
-    //check validate when save todo-list
-    //if there is not title, can't save todo-list
-    function validateItem() {
+      }
+      //check validate when save todo-list
+      //if there is not title, can't save todo-list
+      function validateItem() {
         var items = $("input[type='text'][name='title']");
         if(items.length == 0) {
-            return true;
+          return true;
         }
         var flag = true;
         for(var i = 0; i < items.length; i++) {
-            if($(items.get(i)).val().trim() == "") {
-                flag = false;
-                alert("내용을 입력하지 않은 항목이 있습니다.");
-                break;
-            }
+          if($(items.get(i)).val().trim() == "") {
+            flag = false;
+            alert("내용을 입력하지 않은 항목이 있습니다.");
+            break;
+          }
         }
         return flag;
-    }
-    //sortable function in jquery UI
-    $(function() {
+      }
+      //sortable function in jquery UI
+      $(function() {
         $("#itemBoxWrap").sortable({
-            placeholder:"itemBoxHighlight",
-            start: function(event, ui) {
-                ui.item.data('start_pos', ui.item.index());
-            },
-            stop: function(event, ui) {
-                var spos = ui.item.data('start_pos');
-                var epos = ui.item.index();
-    			      reorder();
-            }
+          placeholder:"itemBoxHighlight",
+          start: function(event, ui) {
+            ui.item.data('start_pos', ui.item.index());
+          },
+          stop: function(event, ui) {
+            var spos = ui.item.data('start_pos');
+            var epos = ui.item.index();
+    			  reorder();
+          }
         });
         $( "#sortable" ).sortable();
         $( "#sortable" ).disableSelection();
-    });
-    //reorder when create, delete, sortable
-    function reorder() {
+      });
+      //reorder when create, delete, sortable
+      function reorder() {
         $(".itemBox").each(function(i, box) {
-            $(box).find(".itemNum").html(i + 1);
+          $(box).find(".itemNum").html(i + 1);
         });
-    }
-    //create new todo item
-    function createItem() {
+      }
+      //create new todo item
+      function createItem() {
         $(createBox())
         .appendTo("#itemBoxWrap")
-        .append("<div class='successBox'>[완료]</div>")
-    		.append("<div class='deleteBox'>[삭제]</div>");
+        .append("<div class='successBox'>[달성]</div>")
+      	.append("<div class='deleteBox'>[삭제]</div>");
         reorder();
-    }
-    function createBox() {
+      }
+      function createBox() {
         var contents = "<div class='itemBox' >"
                      + "<div style='float:left;'>"
                      + "<span class='itemNum'></span> "
                      + "<input type='hidden' name='success' value='false'>"
                      + "title: <input type='text' name='title' "
                      + "style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>"
-                     + "<br>content:<br> <textarea name='content' style='width:400px;'></textarea>"
+                     + "content:<br> <textarea name='content' style='width:400px;'></textarea>"
                      + "TODO<input type='checkbox' name='check' value='true' checked='true'>"
                      + "<input type='date' name='todo' value='1995-01-01'>"
                      + "</div>"
                      + "</div>";
         return contents;
-    }
-
+      }
     </script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <!-- check login -->
-    <% if( !nickname ) { %>
-    <p>로그인을 해주세요.</p>
-    <a href="/login">로그인</a>
-    <a href="/join">회원가입</a>
-    <% } else { %>
-    <p>안녕하세요. <%= nickname %>님</p>
-    <a href="/logout">로그아웃</a>
-    <% } %>
-    <div>
+    <div id="frame">
+      <h1><%= title %></h1>
+      <!-- check login -->
+      <% if( !nickname ) { %>
+        <p>로그인을 해주세요.</p>
+        <a href="/login">로그인</a>
+        <a href="/sign">회원가입</a>
+      <% } else { %>
+        <p>안녕하세요. <%= nickname %>님</p>
+        <a href="/logout">로그아웃</a>
+      <% } %>
+      <div>
         <!-- service only login user -->
         <div style="float:left;width:100px;">TODO-list : </div>
         <div style="clar:both;">
@@ -296,28 +325,35 @@
             <p>로그인시 이용 가능합니다.</p>
           <% } %>
         </div>
-    </div>
-    <br />
-    <div id="itemBoxWrap">
-      <!-- itemboxs -->
-      <!-- load from realm data -->
-      <% if( nickname ) {
+      </div>
+      <br/>
+      <div id="itemBoxWrap">
+        <!-- itemboxs -->
+        <!-- load from realm data -->
+        <% if( nickname ) {
           for(var i = 0;i < data.length; i++){%>
             <div class='itemBox'>
               <div style='float:left;'>
                 <span class='itemNum'></span>
                 <input type='hidden' name='success' value='<%=data[i].success%>'>
-                title: <input type='text' name='title' value='<%=data[i].title%>'
-                style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>
-                <br>content:<br> <textarea name='content' style='width:400px;'><%=data[i].content%></textarea>
-                TODO<input type='checkbox' name='check'  checked='<%=data[i].check%>' value= '<%=data[i].check%>' >
-                <input type='date'  name='todo' value= '<%=data[i].todo%>'>
+                title:<input type='text' name='title' value='<%=data[i].title%>'
+                  style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>
+                content:<br> <textarea name='content' style='width:400px;'><%=data[i].content%></textarea>
+                TODO
+                <% if(data[i].check=='true'){%>
+                  <input type='checkbox' name='check'checked='<%=data[i].check%>'value= '<%=data[i].check%>' >
+                  <input type='date'  name='todo' value= '<%=data[i].todo%>'>
+                <%}else{%>
+                  <input type='checkbox' name='check' value= '<%=data[i].check%>' >
+                  <input type='date'  name='todo' value= '<%=data[i].todo%>' style="display:none;">
+                <%}%>
               </div>
-              <div class="successBox">[완료]</div>
+              <div class="successBox">[달성]</div>
               <div class="deleteBox">[삭제]</div>
             </div>
           <%}
-      } %>
+        } %>
+      </div>
     </div>
   </body>
 </html>
