--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- css lines -->
     <style>
@@ -15,7 +15,18 @@
         padding-left: 50px;
         padding-right: 50px;
         padding-bottom: 50px;
-        background-color: rgba(0,0,0,0.8);
+        background-color: rgba(0,0,0,0.7);
+      }
+      #fixed{
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 200px;
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        background-color: rgba(0,0,0,0.7);
       }
       body{
         background-repeat : repeat;
@@ -25,11 +36,11 @@
       .itemBox {
           border: solid 2px #222222;
           border-radius: 5px;
-          width:400px;
-          height:150px;
+          width:480px;
+          height:200px;
           padding:10px;
           margin-bottom:10px;
-          background-color:#999999;
+          background-color:rgba(153,153,153,0.8);
       }
       .deleteBox{
           display: none;
@@ -46,11 +57,11 @@
       .itemBoxHighlight {
           border: solid 2px #FFFFFF;
           border-radius: 5px;
-          width:400px;
-          height:150px;
+          width:480px;
+          height:200px;
           padding:10px;
           margin-bottom:10px;
-          background-color:#999999;
+          background-color:rgba(153,153,153,0.8);
       }
       .deleteBox {
           float:right;
@@ -68,9 +79,10 @@
   			resize: none;
   		}
       textarea {
+        height: 110px;
   			padding: 10px;
   			box-sizing: border-box;
-  			border: solid 2px #1E90FF;
+  			border: solid 2px rgba(90,90,90,0.8);
   			font-size: 16px;
   			resize: none;
   		}
@@ -92,50 +104,57 @@
             alert("잘못된 접근입니다");
         }
       }
-      //color
-      var finish="#92f292";
-      var fail="#f29292";
-      var normal="#999999";
       //change color of loaded itembox
       /*
         default color: white
-        if success, color change #ddff55
-        else if deadline over, color change #222222
+        if success, color change rgba(150,180,150,0.8)
+        else if deadline over, color change rgba(250,150,150,0.8)
       */
+      function failure(box){
+        var item="<p>"+$(box).find('[name=title]').val()+"</p>";
+        return item;
+      }
       $(window).load(function(){
         $(".itemBox").each(function(i, box) {
           if($(box).find('[name=check]').val()=='true'){
             if($(box).find('[name=todo]').val()<formatDate()){
-              $(box).css("background-color",fail);
+              $(box).css("background-color",'rgba(250,100,100,0.8)');
+              if($(box).find('[name=success]').val()=='false'){
+                $(failure(box)).appendTo("#fixed_body");
+              }
             }
           }
           if($(box).find('[name=success]').val()=='true'){
-            $(box).css("background-color",finish);
+            $(box).css("background-color",'rgba(100,180,100,0.8)');
           }
         });
       });
       //sense a click of successbox and change background
       /*
         default color: white
-        if success, color change #ddff55
-        else if deadline over, color change #222222
+        if success, color change rgba(150,180,150,0.8)
+        else if deadline over, color change rgba(250,150,150,0.8)
       */
       $(document).on("click",".successBox",function(){
         if($(this).parent().find('[name=success]').val()=='true'){
           if($(this).parent().find('[name=check]').val()=='true'){
             if($(this).parent().find('[name=todo]').val()<formatDate()){
-              $(this).parent().css("background-color",fail);
+              $(this).parent().css("background-color",'rgba(250,100,100,0.8)');
             }else{
-              $(this).parent().css("background-color",normal);
+              $(this).parent().css("background-color",'rgba(153,153,153,0.8)');
             }
           }else{
-            $(this).parent().css("background-color",normal);
+            $(this).parent().css("background-color",'rgba(153,153,153,0.8)');
           }
           $(this).parent().find('[name=success]').val('false');
         }else{
-          $(this).parent().css("background-color",finish);
+          $(this).parent().css("background-color",'rgba(100,180,100,0.8)');
           $(this).parent().find('[name=success]').val('true');
         }
+      });
+      //sense a click of fixed div
+      $(document).on("click","#fixed_close",function() {
+        $("#fixed_body").fadeToggle("slow","linear");
       });
       //sense a click of deletebox and delete itembox
       $(document).on("click",".deleteBox",function() {
@@ -159,17 +178,17 @@
           $(this).val("true");
           $(this).parent().find("input[name=todo]").show();
           if($(this).parent().find('[name=todo]').val()<formatDate()){
-            $(this).parent().parent().css("background-color",fail);
+            $(this).parent().parent().css("background-color",'rgba(250,100,100,0.8)');
           }else{
-            $(this).parent().parent().css("background-color",normal);
+            $(this).parent().parent().css("background-color",'rgba(153,153,153,0.8)');
           }
         }else{
           $(this).val("false");
           $(this).parent().find("input[name=todo]").hide();
-          $(this).parent().parent().css("background-color",normal);
+          $(this).parent().parent().css("background-color",'rgba(153,153,153,0.8)');
         }
         if($(this).parent().parent().find('[name=success]').val()=='true'){
-          $(this).parent().parent().css("background-color",finish);
+          $(this).parent().parent().css("background-color",'rgba(100,180,100,0.8)');
         }
       });
       //return today date
@@ -291,9 +310,9 @@
                      + "<div style='float:left;'>"
                      + "<span class='itemNum'></span> "
                      + "<input type='hidden' name='success' value='false'>"
-                     + "title: <input type='text' name='title' "
-                     + "style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>"
-                     + "content:<br> <textarea name='content' style='width:400px;'></textarea>"
+                     + "title :<input type='text' name='title' "
+                     + "style='width:350px; box-sizing: border-box; border: solid 2px rgba(90,90,90,0.8); border-radius: 5px;'>"
+                     + "content:<br> <textarea name='content' style='width:480px;'></textarea>"
                      + "TODO<input type='checkbox' name='check' value='true' checked='true'>"
                      + "<input type='date' name='todo' value='1995-01-01'>"
                      + "</div>"
@@ -336,9 +355,9 @@
               <div style='float:left;'>
                 <span class='itemNum'></span>
                 <input type='hidden' name='success' value='<%=data[i].success%>'>
-                title:<input type='text' name='title' value='<%=data[i].title%>'
-                  style='width:348px; box-sizing: border-box; border: solid 2px #1E90FF; border-radius: 5px;'>
-                content:<br> <textarea name='content' style='width:400px;'><%=data[i].content%></textarea>
+                title : <input type='text' name='title' value='<%=data[i].title%>'
+                  style='width:350px; box-sizing: border-box; border: solid 2px rgba(90,90,90,0.8); border-radius: 5px;'>
+                <br>content:<br> <textarea name='content' style='width:480px;'><%=data[i].content%></textarea>
                 TODO
                 <% if(data[i].check=='true'){%>
                   <input type='checkbox' name='check'checked='<%=data[i].check%>'value= '<%=data[i].check%>' >
@@ -354,6 +373,11 @@
           <%}
         } %>
       </div>
+    </div>
+    <div id="fixed">
+      <div id="fixed_head" style="width:80px; height:22px;float:left;">deadline</div>
+      <div id="fixed_close" style="width:50px; height:22px;float:right;">[click]</div>
+      <div id="fixed_body"><br></div>
     </div>
   </body>
 </html>
