--- a/views/main.ejs
+++ b/views/main.ejs
@@ -312,7 +312,7 @@
                      + "<input type='hidden' name='success' value='false'>"
                      + "title :<input type='text' name='title' "
                      + "style='width:350px; box-sizing: border-box; border: solid 2px rgba(90,90,90,0.8); border-radius: 5px;'>"
-                     + "content:<br> <textarea name='content' style='width:480px;'></textarea>"
+                     + "<br>content:<br> <textarea name='content' style='width:480px;'></textarea>"
                      + "TODO<input type='checkbox' name='check' value='true' checked='true'>"
                      + "<input type='date' name='todo' value='1995-01-01'>"
                      + "</div>"
